Update Homework 1 - Tokenization and segmentation.ipynb

--- a/Homework 1 - Tokenization and segmentation.ipynb
+++ b/Homework 1 - Tokenization and segmentation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({'the': 4, 'in': 2, 'cat': 1, 'hat': 1, 'ate': 1, 'rat': 1, 'vat': 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add your code here\n",
     "from collections import Counter\n",
@@ -162,26 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({'the': 4, 'in': 2, 'cat': 1, 'hat': 1, 'ate': 1, 'rat': 1, 'vat': 1})\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'most_common'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[53], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m words \u001b[39m=\u001b[39m get_words(s)\n\u001b[0;32m     17\u001b[0m wordsCount \u001b[39m=\u001b[39m count_words(words)\n\u001b[1;32m---> 18\u001b[0m words_by_frequency(wordsCount,\u001b[39m2\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[53], line 6\u001b[0m, in \u001b[0;36mwords_by_frequency\u001b[1;34m(wordsCount, n)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwords_by_frequency\u001b[39m(wordsCount, n)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39mCounter:\n\u001b[0;32m      3\u001b[0m     \u001b[39m# n is the most frequent words\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[39m# if n is not passed in then should just display everything\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[39m# sorted by count should return the word and count\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m     wordsCount\u001b[39m.\u001b[39;49mmost_common()\n\u001b[0;32m      7\u001b[0m     \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'most_common'"
+      "Counter({'the': 4, 'in': 2, 'cat': 1, 'hat': 1, 'ate': 1, 'rat': 1, 'vat': 1})\n",
+      "[]\n"
      ]
     }
    ],
@@ -204,7 +185,7 @@
     "    s = 'The cat in the hat ate the rat in the vat'\n",
     "    words = get_words(s)\n",
     "    wordsCount = count_words(words)\n",
-    "    words_by_frequency(wordsCount)"
+    "    words_by_frequency(wordsCount, 0)"
    ]
   },
   {
@@ -244,11 +225,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'carroll-alice.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Add your code here\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# Read the file \u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m File_obj \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mcarroll-alice.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      4\u001b[0m words \u001b[39m=\u001b[39m count_words(File_obj)\n\u001b[0;32m      6\u001b[0m words_by_frequency(words)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'carroll-alice.txt'"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "# Read the file \n",
+    "File_obj = open(\"carroll-alice.txt\", \"r\")\n",
+    "words = count_words(File_obj)\n",
+    "\n",
+    "words_by_frequency(words)\n",
+    "#this should return alice 221 times\n",
+    "# however it SHOULD return 298 for alice why? Maybe because alice is punctual in some cases"
    ]
   },
   {
@@ -328,11 +329,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '\"', 'Oh', ' ', 'no', ',', '', ' ', 'no', ',', '', '\"', '', ' ', 'said', ' ', 'the', ' ', 'little', ' ', 'Fly', ',', '', ' ', '', '\"', 'to', ' ', 'ask', ' ', 'me', ' ', 'is', ' ', 'in', ' ', 'vain', '.', '', '\"', '']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "import re \n",
+    "\n",
+    "text = '\"Oh no, no,\" said the little Fly, \"to ask me is in vain.\"'\n",
+    "\n",
+    "re.split(r'(\\W)',text)\n",
+    "\n",
+    "word = words_by_frequency(words)\n",
+    "for(word, freq) in word_freq:\n",
+    "    for i in range(5):\n",
+    "        \n",
+    "    "
    ]
   },
   {
